2004-11-07  Quentin Mathe <qmathe@club-internet.fr>

        * Source/NSWindow.m (-constrainFrameRect:toScreen:): Modified the method
	to match the specification and the constraints used when the user
	moves/resizes the window with the cursor. That makes possible to have
	resizable windows which extends below the bottom of the screen as long
	as you can move them up to take back the resize control on the screen.
	(-setFrame:display:): Modified the method to remove the possibility to
	have the window title bar positioned over the top of the screen when
	using -gui window decorations.

2004-11-06 08:34 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibTemplates.m: Removed nibInstantiate.  This method
	should only be defined and used inside the GUI builder application
	according to specs.
	
2004-11-04 Adrian Robert <arobert@cogsci.ucsd.edu>

	* Documentation/GuiUser/KeyboardSetup.gsdoc: Describe the new
	"GSModifiersAreKeys" default.
	
2004-10-31 12:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile.postamble: Removed the after-clean clean section
	which is attempting to remove directories which existed prior to
	the change which moved all of the headers.  While this is not
	causing an issue on Linux, some other environments fail when 
	attempting to "make distclean".

2004-10-30  Alex Perez  <aperez@student.santarosa.edu>

	* Headers/AppKit/NSImage.h (+_standardImageWithName:): New method.
	* Source/NSImage.m (+_standardImageWithName:): New method.
	* Source/NSWorkspace.m (_getImageForName:alternate:): Remove. Update
	callers to use +_standardImageWithName: instead.

2004-10-25  Quentin Mathe <qmathe@club-internet.fr>

        * Source/NSWorkspace.m: Moved the code which looks for the application
	icons in the method -iconForFile: to the method -appIconForApp:. As
	a side effect, it fix the bug introduced by my last commit which caused
	a nil exception when the application info.plist contains no NSIcon
	entry.
